Improved German and Finnish, Final Core
Former-commit-id: cf10d69518e75d9c557de4748807d5cefbf17360

--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -35,7 +35,7 @@
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": "Das Auto Update ist noch nicht für Mac verfügbar, bitte aktualisieren Sie das Wallet vorerst manuell",
   "Auto update (Recommended)": "Automatisches Update (Empfohlen)",
   "Automatically check for new versions and notify if a new version is available.": "Automatisch nach einer neuen Walletversion suchen und mich benachrichtigen.",
-  "Avatar Mode": null,
+  "Avatar Mode": "Avatar Modus",
   "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": "FÜHREN SIE HÄUFIGE BACKUP DURCH UND BEWAHREN SIE DEN VERSCHLÜSSELUNGSCODE SICHER AUF.",
   "Background": "Hintergrund",
   "Background Color": "Hintergrundfarbe des Panels",
@@ -47,7 +47,7 @@
   "Balance": "Kontostand",
   "Block Count": "Blockhöhe",
   "Block Weight": "Block Faktor",
-  "Block hash": null,
+  "Block hash": "Blockhash",
   "Bootstrap Recent Database": "Bootstrap die aktuelle Datenbank",
   "Bootstrap process has been aborted": "Bootstrap-Prozess wurde abgebrochen",
   "Browse": "Suchen",
@@ -58,7 +58,7 @@
   "Cannot find module": "Modul kann nicht gefunden werden",
   "Cannot install from that location": "Die Installation von diesem Verzeichnis aus ist nicht möglich",
   "Cannot move to the same account": "Kann nicht auf das gleiche Konto überwiesen werden",
-  "Category": null,
+  "Category": "Kategorie",
   "Change password": "Ändern Sie das Passwort",
   "Check for Updates...": "Auf Updates prüfen...",
   "Check wallet": "Wallet überprüfen",
@@ -77,7 +77,7 @@
   "Closing Nexus Wallet": "Nexus schließen",
   "Color scheme": "Farbschema",
   "Color scheme has been reset to default": "Das Farbschema wurde zurückgesetzt",
-  "Confirm": null,
+  "Confirm": "Bestätigen",
   "Confirm password": "Passwort bestätigen",
   "Confirmations": "Bestätigungen",
   "Connecting to Nexus Core": "Wallet wird geladen, bitte warten",
@@ -92,7 +92,7 @@
   "Copy to clipboard": "In die Zwischenablage kopiert",
   "Core": "Core",
   "Core is in Manual Mode": "Der Core ist im Modus manuell",
-  "Core needs to restart for these settings to take effect!": null,
+  "Core needs to restart for these settings to take effect!": "Damit die Einstellung wirksam wird, muss der Core neu gestartet werden!",
   "Core output": "Core Ausgabe",
   "Core restarting": "Daemon Neustart...",
   "Core settings saved": "Core Einstellungen gespeichert",
@@ -106,38 +106,38 @@
   "Cut": "Ausschneiden",
   "Danger Color": "Danger Farbton",
   "Danger Color Accent": "Farbakzent Danger",
-  "Dark": null,
+  "Dark": "Dunkel",
   "Data directory configured for manual Core.": "Datenverzeichnis für den manuellen Daemon konfiguriert.",
   "Data directory is required": "Daten Verzeichnis wird benötigt",
   "Data directory name": "Datenverzeichnisname",
   "Date": "Datum",
   "Date is required": "Datum erforderlich",
-  "Decompressing the database...": null,
-  "Decompressing...": null,
-  "Delete": null,
-  "Delete contact": null,
-  "Delete contact %{name}?": null,
-  "Deprecated Specification version": null,
-  "Description": null,
+  "Decompressing the database...": "Datenbank wird dekomprimiert...",
+  "Decompressing...": "Dekomprimieren...",
+  "Delete": "Löschen",
+  "Delete contact": "Kontakt löschen",
+  "Delete contact %{name}?": "Kontakt %{name} löschen?",
+  "Deprecated Specification version": "Veraltete Spezifikationsversion",
+  "Description": "Beschreibung",
   "Developer mode": "Entwicklermodus",
   "Development mode enables advanced features to aid in development. After enabling the wallet must be closed and reopened to enable those features.": "Der Entwicklungsmodus ermöglicht erweiterte Funktionen zur Unterstützung bei der Entwicklung. Um diese Funktionen nutzen zu können, muss nach der Aktivierung die Wallet geschlossen und wieder geöffnet werden.",
-  "Disable %{moduleName}?": null,
-  "Disabling Avatar will make the core use a separate change key": null,
-  "Dismiss": null,
-  "Display Test Transactions on the Transactions page": null,
-  "Display name": null,
-  "Download Recent Database": null,
-  "Download recent database?": null,
-  "Download transactions history": null,
-  "Downloading": null,
-  "Downloading a recent version of the database might reduce the time it takes to synchronize your wallet": null,
-  "Downloading the database": null,
-  "Drop here to install": null,
-  "Edit": null,
+  "Disable %{moduleName}?": "%{moduleName} deaktivieren?",
+  "Disabling Avatar will make the core use a separate change key": "Das Deaktivieren des Avatar zwingt den Kern einem separaten Change-Key zu benutzen",
+  "Dismiss": "Verwerfen",
+  "Display Test Transactions on the Transactions page": "Test Transaktionen auf der Transaktionsseite anzeigen",
+  "Display name": "Anzeigename",
+  "Download Recent Database": "Letzte Datenbank herunterladen",
+  "Download recent database?": "Letzte Datenbank herunterladen?",
+  "Download transactions history": "Transaktionsverlauf herunterladen",
+  "Downloading": "Ladet herunter",
+  "Downloading a recent version of the database might reduce the time it takes to synchronize your wallet": "Das Herunterladen einer aktuellen Version der Datenbank könnte die Zeit verringern, die es benötigt, um Ihre Wallet zu synchronisieren",
+  "Downloading the database": "Datenbank wird heruntergeladen",
+  "Drop here to install": "Hier ablegen zum Installieren",
+  "Edit": "Bearbeiten",
   "Edit contact": "Kontakt bearbeiten",
-  "Email": null,
-  "Email address": null,
-  "Enable %{moduleName}?": null,
+  "Email": "E-Mail",
+  "Email address": "E-Mail-Adresse",
+  "Enable %{moduleName}?": "Aktiviere %{moduleName}?",
   "Enable manual Core mode if you are running the Nexus Core manually outside of the wallet.": "Manuellen Daemon-Modus aktivieren, wenn der Daemon außerhalb der Wallet ausgeführt wird.",
   "Enable mining": "Mining aktivieren",
   "Enable staking": "Staking aktivieren",
@@ -145,16 +145,16 @@
   "Enable/Disable staking on the wallet.": "Aktivieren / Deaktivieren des Stakings in der Wallet.",
   "Encrypt and restart": "Verschlüsseln und Neustarten",
   "Encrypt wallet": "Wallet verschlüsseln",
-  "Enter a new account name or pick an existing account:": null,
+  "Enter a new account name or pick an existing account:": "Geben Sie einen neuen Kontonamen ein oder wählen Sie ein bestehendes Konto:",
   "Enter address here": "Adresse hier eingeben",
   "Enter console commands here (ex: getinfo, help)": "Konsolenbefehle hier eingeben (Beispiel: getinfo, help)",
   "Enter manual Core mode?": "In den manuellen Daemon-Modus wechseln?",
   "Enter your message": "Geben Sie Ihre Nachricht ein",
-  "Enter your wallet password": null,
-  "Error bootstrapping recent database": null,
+  "Enter your wallet password": "Geben Sie ihr Wallet Passwort ein",
+  "Error bootstrapping recent database": "Fehler beim Starten der aktuellen Datenbank",
   "Error changing password": "Fehler beim ändern des Passwort",
-  "Error copying module files": null,
-  "Error creating new address": null,
+  "Error copying module files": "Fehler beim Kopieren der Moduldateien",
+  "Error creating new address": "Fehler beim Erstellen der neuen Adresse",
   "Error encrypting wallet": "Fehler beim entsperren der Wallet",
   "Error getting private key": "Fehler den Private Key anzuzeigen",
   "Error importing private key": "Fehler beim Importieren des Private Key",
@@ -167,38 +167,38 @@
   "Exit manual Core mode?": "Manuellen Daemon-Modus verlassen?",
   "Export contacts": "Kontakte exportieren",
   "Export custom theme": "Farbschema exportieren",
-  "Fake Test Transactions": null,
+  "Fake Test Transactions": "Fake-Test-Transaktionen",
   "Fee": "Gebühr",
   "Fiat currency": "Fiat Währung",
-  "File": null,
+  "File": "Datei",
   "Foreground Color": "Textfarbe",
   "From account": "Vom Konto",
-  "Generate": null,
-  "Genesis": null,
+  "Generate": "Generieren",
+  "Genesis": "Genesis",
   "Genesis transaction": "Genesis Transaktion",
   "Getting next block...": "Nächster Block wird empfangen...",
   "Globe Arch Color": "Farbe der Verbindungen",
   "Globe Color": "Farbe der Erde",
   "Globe Pillar Color": "Farbe der Standorte",
-  "Hash Difficulty": null,
-  "Help": null,
+  "Hash Difficulty": "Hash Schwierigkeit",
+  "Help": "Hilfe",
   "High": "Hoch",
-  "I have read and Accept the Agreement": null,
-  "I understand the risk": null,
-  "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": null,
+  "I have read and Accept the Agreement": "Ich habe die Vereinbarung gelesen und akzeptiert",
+  "I understand the risk": "Ich verstehe das Risiko",
+  "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": "FALSCHES VERWENDEN DIESER SOFTWARE KÖNNTE ZUM PERMANENTE VERLIEREN VON MÜNZEN FÜHREREN.",
   "IP address": "IP Adresse",
   "IP address configured for manual Core.": "IP Adresse für den manuellen Daemon konfiguriert.",
-  "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": null,
+  "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": "IP/Ports dürfen abgebaut werden. Separate von <b>;</b> . Wildcards werden nur in IP unterstützt",
   "Ignore": "Ignorieren",
-  "Immature": null,
-  "Immature Balance": null,
+  "Immature": "Unreif",
+  "Immature Balance": "Unreife Saldo",
   "Import": "Importieren",
   "Import custom theme": "Design auswählen",
   "Import private key": "Private Key importieren",
-  "Install Module": null,
-  "Install it later": null,
-  "Installing Module...": null,
-  "Interface Version": null,
+  "Install Module": "Modul installieren",
+  "Install it later": "Später installieren",
+  "Installing Module...": "Modul wird installiert...",
+  "Interface Version": "Schnittstellenversion",
   "Invalid account name": null,
   "Invalid address": "Ungültige Adresse",
   "Invalid amount": "Unglültiger Betrag",
@@ -402,43 +402,43 @@
   "Theme exported": "Design exportiert",
   "Theme has been reset to default": "Das Design wurde zurückgesetzt",
   "There are currently no updates available": null,
-  "There must be at least one address.": null,
+  "There must be at least one address.": "Es muss mindestens eine Adresse geben.",
   "There must be at least one recipient": "Es muss zumindest einen Empfänger geben",
   "This is an address registered to this wallet.": "Diese Adresse ist in dieser Wallet registriert.",
-  "This is not one of your addresses.": null,
-  "This is one of your addresses.": null,
-  "This is your Default Address": null,
-  "This module is developed by Nexus": null,
-  "This repository does not exist or is private": null,
-  "This repository is not verified to be the real source code of this module": null,
-  "This setting change will only take effect after Core is restarted. Do you want to restart the Core now?": null,
-  "Time": null,
+  "This is not one of your addresses.": "Dies ist keine Ihrer Adressen.",
+  "This is one of your addresses.": "Dies ist eine Ihrer Adressen.",
+  "This is your Default Address": "Dies ist Ihre Standard-Adresse",
+  "This module is developed by Nexus": "Dieses Modul wird von Nexus entwickelt",
+  "This repository does not exist or is private": "Dieses Repository existiert nicht oder ist privat",
+  "This repository is not verified to be the real source code of this module": "Dieses Repository ist nicht verifiziert, um der eigentliche Quellcode dieses Moduls zu sein",
+  "This setting change will only take effect after Core is restarted. Do you want to restart the Core now?": "Diese Einstellung wird erst nach dem Neustart des Cores wirksam. Möchten Sie den Core jetzt neu starten?",
+  "Time": "Zeit",
   "Time is required": "Uhrzeit erforderlich",
-  "Time must be at least one hour in the future": null,
+  "Time must be at least one hour in the future": "Die Zeit muss mindestens eine stunde in der Zukunft liegen",
   "Time span": "Zeitpunkt",
-  "Time zone": null,
+  "Time zone": "Zeitzone",
   "To account": "Zum Konto",
-  "Toggle Developer Tools": null,
-  "Toggle FullScreen": null,
-  "Toggle Module's Developer Tools": null,
-  "Transaction ID": null,
+  "Toggle Developer Tools": "Entwickler-Tools umschalten",
+  "Toggle FullScreen": "Vollbild umschalten",
+  "Toggle Module's Developer Tools": "Modul-Entwickler-Tools umschalten",
+  "Transaction ID": "Transaktions-ID",
   "Transaction details": "Details zu den Transaktionen",
   "Transaction received": "Transaktion empfangen",
   "Transaction sent": "Transaktion gesendet",
   "Transactions": "Transaktionen",
-  "Transactions Details": null,
-  "Transactions chart": null,
-  "Trust": null,
+  "Transactions Details": "Transaktionsdetails",
+  "Transactions chart": "Transaktionsdetails",
+  "Trust": "Vertrauen",
   "Trust Weight": "Trust Faktor",
   "Trust transaction": "Trust Transaktion",
   "Turn auto update Off": "Automatisches Update deaktivieren",
-  "Turn module open source policy off?": null,
-  "Turn module open source policy on?": null,
-  "Turn policy off": null,
+  "Turn module open source policy off?": "Modul Open Source Policy aus?",
+  "Turn module open source policy on?": "Modul Open Source Policy einschalten?",
+  "Turn policy off": "Richtlinien aus",
   "Twinkling stars": "Sternenhimmel",
-  "Unknown": null,
-  "Unknown login status": null,
-  "Unsupported file type": null,
+  "Unknown": "Unbekannt",
+  "Unknown login status": "Unbekannter Login-Status",
+  "Unsupported file type": "Nicht unterstützter Dateityp",
   "Update available! Downloading...": "Update verfügbar! Herunterladen...",
   "Used to correct transaction/balance issues, scans over every block in the database. Could take up to 10 minutes.": null,
   "Username": "Nutzername",
@@ -452,17 +452,17 @@
   "View private key for address": "Den Private Key für diese Adresse anzeigen",
   "Visit repository": "Repository besuchen",
   "Volume": "Volumen",
-  "Waiting for 100% synchronization to start staking...": null,
-  "Waiting for average age of balance to exceed 72 hours to start staking...": null,
+  "Waiting for 100% synchronization to start staking...": "Warten auf 100% Synchronisation, um zu staken...",
+  "Waiting for average age of balance to exceed 72 hours to start staking...": "Warten auf ein durchschnittliches Alter von Saldo bis zu 72 Stunden, um zu staking...",
   "Wallet backed up": "Wallet gesichert",
   "Wallet has been backed up": "Wallet wurde gesichert",
   "Wallet has been encrypted.": "Die Wallet wurde verschlüsselt.",
   "Wallet is not encrypted": "Wallet ist nicht verschlüsselt",
   "Wallet is not staking": "Wallet ist nicht im staking mode",
   "Wallet is staking": "Wallet ist im Staking mode",
-  "Wallet password": null,
+  "Wallet password": "Wallet-Passwort",
   "Wallet will be automatically refreshed for the change to take effect": "Wallet wird automatisch aktualisiert, damit die Änderung wirksam wird",
-  "Warning": null,
+  "Warning": "Warnung",
   "Yes": "Ja",
   "Yes, abort": "Ja, Abbruch",
   "Yes, let's bootstrap it": "Ja, lass es bootstrapen",
@@ -473,5 +473,5 @@
   "Your wallet is not encrypted!": "Ihre Wallet ist nicht verschlüsselt!",
   "Your wallet password": "Ihr Wallet Passwort",
   "or drag and drop it here": "hier herein ziehen",
-  "rows": null
+  "rows": "reihen"
 }
