--- a/assets/translations/fi.json
+++ b/assets/translations/fi.json
@@ -35,7 +35,7 @@
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": "Automaattiset päivitykset eivät vielä ole saatavilla Macilla, päivitäthän lompakkosi manuaalisesti toistaiseksi",
   "Auto update (Recommended)": "Automaattinen päivitys (Suositeltu)",
   "Automatically check for new versions and notify if a new version is available.": "Automaattisesti tarkistaa onko uusia versioita saatavilla ja ilmoittaa kun on.",
-  "Avatar Mode": null,
+  "Avatar Mode": "Avatar Tila",
   "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": "VARMUUSKOPIOI USEASTI JA PIDÄ SALAUSAVAIMESI TURVASSA.",
   "Background": "Taustakuva",
   "Background Color": "Taustaväri",
@@ -47,7 +47,7 @@
   "Balance": "Saldo",
   "Block Count": "Lohko lukumäärä",
   "Block Weight": "Lohko Paino",
-  "Block hash": null,
+  "Block hash": "Lohkon Hajautus",
   "Bootstrap Recent Database": "Esilataa Tuore Tietokanta",
   "Bootstrap process has been aborted": "Esilataus prosessi on keskeytetty",
   "Browse": "Selaa",
@@ -58,7 +58,7 @@
   "Cannot find module": "Moduulia ei löydy",
   "Cannot install from that location": "Ei voida asentaa tuosta sijainnista",
   "Cannot move to the same account": "Ei voi siirtää samalle tilille",
-  "Category": null,
+  "Category": "Kategoria",
   "Change password": "Vaihda salasana",
   "Check for Updates...": "Tarkista päivitykset...",
   "Check wallet": "Tarkista lompakko",
@@ -77,7 +77,7 @@
   "Closing Nexus Wallet": "Suljetaan Nexus Lompakko",
   "Color scheme": "Väriteema",
   "Color scheme has been reset to default": "Valinnat päivitetty oletukseksi",
-  "Confirm": null,
+  "Confirm": "Vahvista",
   "Confirm password": "Vahvista salasana",
   "Confirmations": "Vahvistuksia",
   "Connecting to Nexus Core": "Yhdistetään Nexus Ytimeen",
@@ -92,7 +92,7 @@
   "Copy to clipboard": "Kopioi leikepöydälle",
   "Core": "Ydin",
   "Core is in Manual Mode": "Ydin on Manuaalisessa Tilassa",
-  "Core needs to restart for these settings to take effect!": null,
+  "Core needs to restart for these settings to take effect!": "Ydin on käynnistettävä uudelleen, jotta asetukset tulevat voimaan!",
   "Core output": "Ytimen tuloste",
   "Core restarting": "Ydin uudelleenkäynnistyy",
   "Core settings saved": "Ytimen asetukset tallennettu",
@@ -122,13 +122,13 @@
   "Developer mode": "Kehittäjätila",
   "Development mode enables advanced features to aid in development. After enabling the wallet must be closed and reopened to enable those features.": "Kehittäjätila sallii kehittyneiden ominaisuuksien käytön auttaakseen kehityksessä. Kun laitat sen päälle, lompakko täytyy sulkea ja avata uudelleen.",
   "Disable %{moduleName}?": "Ota pois päältä %{moduleName}?",
-  "Disabling Avatar will make the core use a separate change key": null,
+  "Disabling Avatar will make the core use a separate change key": "Avatar Tilan pois päältä ottaminen vaihtaa ytimen käyttämään erillistä muutosavainta",
   "Dismiss": "Hylkää",
   "Display Test Transactions on the Transactions page": "Näytä Testi Rahansiirrot Rahansiirto sivulla",
   "Display name": "Näyttönimi",
   "Download Recent Database": "Lataa Tuore Tietokanta",
   "Download recent database?": "Lataa tuore tietokanta?",
-  "Download transactions history": null,
+  "Download transactions history": "Lataa rahansiirtohistoria",
   "Downloading": "Ladataan",
   "Downloading a recent version of the database might reduce the time it takes to synchronize your wallet": "Tuoreen version lataus tietokannasta saattaa vähentää aikaa, joka vaaditaan lompakon synkronisointiin",
   "Downloading the database": "Ladataan tietokantaa",
@@ -150,7 +150,7 @@
   "Enter console commands here (ex: getinfo, help)": "Syötä konsoli komennot tänne (esim: getinfo, help)",
   "Enter manual Core mode?": "Käynnistetäänkö manuaalinen Ydin tila?",
   "Enter your message": "Syötä viestisi",
-  "Enter your wallet password": null,
+  "Enter your wallet password": "Syötä lompakon salasana",
   "Error bootstrapping recent database": "Virhe esiladatessa tuoretta tietokantaa",
   "Error changing password": "Salasanan vaihtamisessa tapahtui virhe",
   "Error copying module files": "Moduulin tiedostojen kopioimisessa tapahtui virhe",
@@ -183,15 +183,15 @@
   "Hash Difficulty": "Tarkisteen Vaikeustaso",
   "Help": "Apua",
   "High": "Korkea",
-  "I have read and Accept the Agreement": null,
-  "I understand the risk": null,
+  "I have read and Accept the Agreement": "Olen lukenut ja hyväksynyt käyttäjäehdot",
+  "I understand the risk": "Ymmärrän riskin",
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": "TÄMÄN OHJELMISTON SOPIMATON KÄYTTÖ VOI JOHTAA RAHOJESI PYSYVÄÄN KADOTUKSEEN.",
   "IP address": "IP osoite",
   "IP address configured for manual Core.": "IP osoite konfiguroitu manuaaliselle Ytimelle.",
-  "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": null,
+  "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": "IP/Portit joiden sallitaan louhivan. Erottele <b>;</b>. Villikortit sallittuja vain IP:ssä",
   "Ignore": "Ohita",
   "Immature": "Kypsymätön",
-  "Immature Balance": null,
+  "Immature Balance": "Kypsymätön tase",
   "Import": "Tuo",
   "Import custom theme": "Tuo mukautettu teema",
   "Import private key": "Tuo yksityisavain",
@@ -212,10 +212,10 @@
   "Label (optional)": "Nimike (valinnainen)",
   "Language": "Kieli",
   "Last updated\n%{time}": "Viimeksi päivitetty\n%{time}",
-  "License Agreement": null,
+  "License Agreement": "Käyttöoikeussopimus",
   "Light": "Vaalea",
-  "Loading transaction details...": null,
-  "Loading transactions": null,
+  "Loading transaction details...": "Ladataan rahansiirtojen tietoja...",
+  "Loading transactions": "Ladataan rahansiirtoja",
   "Local Time": "Paikallinen aika",
   "Log in now": "Kirjaudu sisään nyt",
   "Log out": "Kirjaudu ulos",
@@ -240,7 +240,7 @@
   "Minimize the wallet when closing the window instead of closing it.": "Pienennä lompakko suljettaessa sulkemisen sijaan.",
   "Minimum amount of confirmations before a block is accepted. Local only.": "Vähimmäismäärä hyväksyntöjä kunnes lohko hyväksytään. Vain paikallinen.",
   "Minimum confirmations": "Vähimmäismäärä hyväksyntöjä",
-  "Mining IP Whitelist": null,
+  "Mining IP Whitelist": "Louhimisen IP Whitelist",
   "Module Details": "Moduulin Tiedot",
   "Module Specifications version": "Moduulin Määrittely versio",
   "Module has been successfully installed": "Moduuli on asennettu onnistuneesti",
@@ -309,7 +309,7 @@
   "Past Week": "Viime viikolla",
   "Past Year": "Viime vuonna",
   "Paste": "Liitä",
-  "Pending": null,
+  "Pending": "Odottaa",
   "Phone Number": "Puhelinnumero",
   "Phone number": "Puhelinnumero",
   "Please wait for Nexus Core to start.": "Odota, että Nexus Ydin käynnistyy.",
@@ -351,7 +351,7 @@
   "Restarting Core...": "Uudelleenkäynnistetään Ydintä...",
   "Restarting Nexus Core...": "Uudelleenkäynnistetään Nexus Ydintä...",
   "Sample Address": "Malli Osoite",
-  "Save Settings": null,
+  "Save Settings": "Tallenna asetukset",
   "Save changes": "Tallenna muutokset",
   "Search address": "Etsi osoite",
   "Search contact": "Etsi yhteystieto",
@@ -369,24 +369,24 @@
   "Send": "Lähetä",
   "Send NXS": "Lähetä NXS",
   "Send To multiple recipients": "Lähetä usealle vastaanottajalle",
-  "Send all": null,
+  "Send all": "Lähetä kaikki",
   "Send anonymous usage data": "Lähetä anonyymiä käyttötietoa",
   "Send anonymous usage data to allow the Nexus developers to improve the wallet.": "Lähetä anonyymiä käyttötietoa, jotta Nexuksen kehittäjät voivat parantaa lompakkoa.",
   "Send from": "Lähetä osoitteesta",
   "Send to": "Lähetä vastaanottajalle",
   "Send transaction?": "Lähetä rahansiirto?",
   "Sent": "Lähetetty",
-  "Set timeout for login": null,
+  "Set timeout for login": "Aseta aikakatkaisu kirjautumiselle",
   "Settings": "Asetukset",
-  "Settings Saving": null,
-  "Settings Unchanged": null,
-  "Show transactions chart": null,
+  "Settings Saving": "Asetukset tallennettu",
+  "Settings Unchanged": "Asetuksia ei muutettu",
+  "Show transactions chart": "Näytä rahansiirtojen kaavio",
   "Source code": "Lähdekoodi",
   "Stake": "Panos",
   "Stake Difficulty": "Panostuksen Vaikeustaso",
   "Stake Rate": "Panostus Kurssi",
   "Stake Weight": "Panostuksen Paino",
-  "Staking and mining rewards that need to get past 120 block-old to become available": null,
+  "Staking and mining rewards that need to get past 120 block-old to become available": "Panostus- ja louhintapalkinnot vaativat 120 lohkoa, jotta ovat käytettävissä",
   "Start Nexus Core": "Käynnistä Nexus Ydin",
   "Stop Nexus Core": "Pysäytä Nexus Ydin",
   "Stopping Core...": "Pysäytetään Ydin...",
@@ -412,7 +412,7 @@
   "This repository does not exist or is private": "Tätä tietolähdettä ei ole tai se on yksityinen",
   "This repository is not verified to be the real source code of this module": "Välitetty tietolähde ei ole vahvistettu olevan oikea lähdekoodi tälle moduulille",
   "This setting change will only take effect after Core is restarted. Do you want to restart the Core now?": "Tämä asetus astuu voimaan kun Ydin on uudelleenkäynnistetty. Haluatko käynnistää Ytimen uudestaan nyt?",
-  "Time": null,
+  "Time": "Aika",
   "Time is required": "Aika vaaditaan",
   "Time must be at least one hour in the future": "Ajan on oltava vähintään yksi tunti tulevaisuudessa",
   "Time span": "Aikaväli",
@@ -421,13 +421,13 @@
   "Toggle Developer Tools": "Kehittäjätyökalut päälle/pois",
   "Toggle FullScreen": "Laajenna koko näytön kokoiseksi",
   "Toggle Module's Developer Tools": "Moduulin Kehittäjätyökalut päälle/pois",
-  "Transaction ID": null,
+  "Transaction ID": "Rahansiirron ID",
   "Transaction details": "Rahansiirto tiedot",
   "Transaction received": "Rahansiirto vastaanotettu",
   "Transaction sent": "Rahansiirto lähetetty",
   "Transactions": "Maksutapahtumat",
-  "Transactions Details": null,
-  "Transactions chart": null,
+  "Transactions Details": "Rahansiirron tiedot",
+  "Transactions chart": "Rahansiirtojen kaavio",
   "Trust": "Luotto",
   "Trust Weight": "Luoton Paino",
   "Trust transaction": "Luotto rahansiirto",
@@ -452,17 +452,17 @@
   "View private key for address": "Katso yksityisavain osoitteelle",
   "Visit repository": "Mene tietolähteeseen",
   "Volume": "Volyymi",
-  "Waiting for 100% synchronization to start staking...": null,
-  "Waiting for average age of balance to exceed 72 hours to start staking...": null,
+  "Waiting for 100% synchronization to start staking...": "Odotetaan että synkronointi saavuttaa 100% aloittakseen panostuksen...",
+  "Waiting for average age of balance to exceed 72 hours to start staking...": "Odotetaan, että taseen keskitasoinen ikä ylittää 72h aloittakseen panostuksen...",
   "Wallet backed up": "Lompakko varmuuskopioitu",
   "Wallet has been backed up": "Lompakko on varmuuskopioitu",
   "Wallet has been encrypted.": "Lompakko on salattu.",
   "Wallet is not encrypted": "Lompakkoa ei ole salattu",
   "Wallet is not staking": "Lompakko ei panosta",
   "Wallet is staking": "Lompakko panostaa",
-  "Wallet password": null,
+  "Wallet password": "Lompakon salasana",
   "Wallet will be automatically refreshed for the change to take effect": "Lompakko automaattisesti päivitetään, jotta muutos tulee voimaan",
-  "Warning": null,
+  "Warning": "Varoitus",
   "Yes": "Kyllä",
   "Yes, abort": "Kyllä, lopeta",
   "Yes, let's bootstrap it": "Kyllä, esiladataan se",
@@ -473,5 +473,5 @@
   "Your wallet is not encrypted!": "Lompakkoa ei ole salattu!",
   "Your wallet password": "Lompakkosi salasana",
   "or drag and drop it here": "tai raahaa ja irroita se tänne",
-  "rows": null
+  "rows": "rivit"
 }
